# cryptolab

ai/: pyproject.toml  requirements.txt
ai/app/: celery_app.py  main.py
ai/app/db/: database.py  models.py
ai/app/routers/: decide.py  models.py  train.py  watchlist_router.py
ai/app/schemas/: auth_schema.py  decide.py  models.py  watchlist_schema.py
ai/app/services/: auth_service.py  watchlist_service.py
ai/app/tasks/: train_task.py
ai/app/utils/: data_utils.py  model_load_utils.py  token_utils.py
backend/: .gitignore  Dockerfile  README.md  celerybeat-schedule  entrypoint.py  entrypoint.sh  openapi.json  pyproject.toml  requirements.txt  test.py
backend/app/: celery_app.py  dataset.py  main.py
backend/app/db/: database.py  models.py
backend/app/routers/: auth_router.py  backtest.py  backtest_router.py  data_router.py  decide_router.py  explain_router.py  models_router.py  score_chart_router.py  train_router.py  watchlist_router.py
backend/app/schemas/: auth_schema.py  backtest.py  backtest_schema.py  data_schema.py  decide_schema.py  explain_schema.py  models_schema.py  score_chart_schema.py  train_schema.py  watchlist_schema.py
backend/app/services/: ohlcv_service.py
backend/app/strategies/: LightGBM_strategy.py  __init__.py  random_strategy.py  strategy.py
backend/app/tasks/: __init__.py  backtest_task.py  explain_chart_task.py  explain_model_task.py  explain_task.py  (+3 more)
backend/config/: ohlcv_settings.yml
backend/data/: ohlcv_KRW-BTC_202101010000_202501010000_60m.csv
backend/tests/: test_celery_integration.py  test_ohlcv_service.py
(+31 files in other folders)
