[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backtrader>=1.9.78.123",
    "celery>=5.5.3",
    "fastapi>=0.120.1",
    "lightgbm>=4.6.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "redis>=7.0.1",
    "ta>=0.11.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
